2010-09-04 Markus Malkusch <markus@malkusch.de>

    * classes/AbstractAutoloader.php (AbstractAutoloader::autoload()):
    AbstractAutoloader::autoload() checks also interface_exists() to skip
    its work.

    * classes/AbstractAutoloader.php (AbstractAutoloader::autoload()):
    Exceptions are never thrown as this breaks compatibility with
    functions like class_exists().

2010-05-27 Markus Malkusch <markus@malkusch.de>

    * classes/autoloadAPI/AutoloadAPI.php (AutoloadAPI):
    Before PHP 5.2.11 spl_autoload_functions() didn't return proper callbacks.
    The callback always contained the class name and a function. The object got
    lost in the stack. This prevented the Autoloader to work in such an environment.
    AutoloadAPI::getInstance() returns a wrapper for the spl_autoload methods
    which would work around this problem.

2010-05-20 Markus Malkusch <markus@malkusch.de>

    * classes/AbstractAutoloader.php (AbstractAutoloader::CLASS_CONSTRUCTOR):
    The class constructor __static() is deprecated. The new class constructor is
    called classConstructor(). A method which is called __static() would violate
    the PEAR coding standard. Only PHP magic methods should be prefixed with a
    double underscore.

    Code which uses the old class constructor will still work. The autoloader would
    raise an E_USER_DEPRECATED warning for the deprecated class constructor
    __static().

2010-05-18 Markus Malkusch <markus@malkusch.de>

    * classes/AbstractAutoloader.php (AbstractAutoloader::loadClass()):
    The include of the class definition used @ for error suppression. This
    avoided the useful output of fatal errors.

2010-05-09 Markus Malkusch <markus@malkusch.de>

    * classes/parser/AutoloaderFileParser_RegExp.php (AutoloaderFileParser_RegExp::getClassesInSource()):
    AutoloaderFileParser_RegExp has support for Namespaces.

2010-05-08 Markus Malkusch <markus@malkusch.de>
